# pumpkin.

./: COMMUNITY_SETUP.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_CHECKLIST_v0.2.md  ROADMAP.md  TRY_ME.md  package-lock.json  package.json  pumpkin.ohm  run_smoke_tests.sh  task.md  test_v5.pumpkin  tsconfig.json
docs/: CLI_Reference.md  Installation.md  Language_Reference_v0.1.md  RELEASE_CHECKLIST.md  architecture_overview.md  arrays_spec.md  ast_deserialization_example.md  ast_design.md  brand_guide.md  bytecode_migration_plan.md  bytecode_vm_design.md  bytecode_vm_spec.md  cli_ux_guidelines.md  course_mode_design.md  curriculum.md  debugger_spec.md  debugger_ux_spec.md  developer_debug_overlay.md  distribution_strategy.md  education_first_design.md  embedding_api_spec.md  error_execution_flow.md  error_system_design.md  error_tone_guide.md  examples_panel_design.md  execution-model.md  execution_contract_v0.1.md  execution_engine_api.md  execution_lifecycle.md  execution_performance_strategy.md  execution_state_model.md  execution_step_mode.md  feedback_form.md  feedback_triage_plan.md  first_100_users.md  first_10_minutes.md  first_program_walkthrough.md  functions_spec.md  governance_model.md  growth_strategy.md  (+61 more)
examples/: README.md  age_checker.pumpkin  ask_name.pumpkin  calculator.pumpkin  countdown.pumpkin  daily_routine.pumpkin  (+16 more)
pumpkin_core/: Cargo.toml
pumpkin_core/src/: ast.rs  chunk.rs  compiler.rs  debugger.rs  env.rs  errors.rs  interpreter.rs  lib.rs  value.rs  vm.rs  wasm.rs
pumpkin_core/tests/: integration_tests.rs
(+135 files in other folders)
