[package]
name = "pumpkin_core"
version = "0.1.0"
edition = "2021"
authors = ["Pumpkin Team"]
description = "The executing core of the Pumpkin programming language."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# Dev dependencies for testing
[dev-dependencies]
